@@ -14,6 +14,9 @@ Changes with Apache 2.0.56
      ap_escape_html so we escape quotes.  Reported by JPCERT.
      [Mark Cox]
 
+  *) Add APR/APR-Util Compiled and Runtime Version numbers to the
+     output of 'httpd -V'. [William Rowe]
+
   *) Ensure that the proper status line is written to the client, fixing
      incorrect status lines caused by filters which modify r->status without 
      resetting r->status_line, such as the built-in byterange filter.
